# WebRTC_Digest

./: .gitignore  LICENSE  README.md
api/scoped_refptr/: BUILD.gn  README.md
api/scoped_refptr/api/: BUILD.gn  api.h  foo.h  scoped_refptr.h
api/scoped_refptr/api/rtc_base/: constructor_magic.h
api/scoped_refptr/app/: BUILD.gn  api.cc  api.h  foo.cc  foo.h  main.cc
api/scoped_refptr/gn/: BUILDCONFIG.gn  checkdir.py
api/scoped_refptr/rtc_base/: BUILD.gn
api/task_queue/: README.md  run_app.sh
api/task_queue/api/: BUILD.gn
api/task_queue/app/: BUILD.gn  main.cc
api/task_queue/rtc_base/: BUILD.gn
api/thread_annotation/app/: api.cc  api.h  foo.h  main.cc  simple_mutex.h
rtc_base/synchronization/mutex/: BUILD.gn  README.md  build_app.sh
rtc_base/synchronization/mutex/app/: api.cc  api.h  main.cc
rtc_base/synchronization/mutex/gn/: highest_version_dir.py
rtc_base/synchronization/mutex/rtc_base/: BUILD.gn
rtc_base/thread_annotation/: .gn  BUILD.gn  README.md
rtc_base/thread_annotation/app/: BUILD.gn  foo.cc
rtc_base/thread_annotation/gn/: BUILD.gn  BUILDCONFIG.gn  README.md  lowest_version_dir.py  xamarin_inject_compat.py
rtc_base/thread_annotation/gn/toolchain/: BUILD.gn
rtc_base/thread_annotation/rtc_base/: BUILD.gn
