executable("webrtc-digest") {
    configs += [ 
            "//:rtc_config",
    ]
    
    sources = [
        "main.cc",
        "api.cc",
        "api.h",
        "foo.cc",
        "foo.h",
    ]

    include_dirs = [
        ".", 
        "//api",
        "//rtc_base",
    ]
    deps = [
        "//api:webrtc-digest-api",
    ]

    libs = []
}
