source_set("webrtc-digest-rtc-base") {
    configs += [ 
            "//:rtc_config",
    ]
    
    sources = [
        "constructor_magic.h",
        "ref_count.h",
        "ref_counter.h",
        "ref_counted_object.h",
    ]

    include_dirs = [
        ".", 
        "//rtc_base",
        "//third_party",
    ]
    deps = []
    libs = []
}
